// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Page rendering 1`] = `
<Fragment>
  <withI18nextTranslation(Metadata)
    description="Test description"
  />
  <noscript>
    <Message
      heading="JavaScript Required"
      type="error"
    >
      <p>
        You need JavaScript to use Regexper.
      </p>
      <p>
        If you have concerns regarding the use of tracking code on Regexper, please see the 
        <mockConstructor
          to="/privacy"
        >
          Privacy Policy
        </mockConstructor>
        .
      </p>
    </Message>
  </noscript>
  <withI18nextTranslation(App)
    expr=""
    permalinkUrl={null}
    syntax="testJs"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "name": "Testing JS",
        },
        Object {
          "id": "other",
          "name": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`Index Page rendering with an expression on the URL 1`] = `
<Fragment>
  <withI18nextTranslation(Metadata)
    description="Test description"
  />
  <noscript>
    <Message
      heading="JavaScript Required"
      type="error"
    >
      <p>
        You need JavaScript to use Regexper.
      </p>
      <p>
        If you have concerns regarding the use of tracking code on Regexper, please see the 
        <mockConstructor
          to="/privacy"
        >
          Privacy Policy
        </mockConstructor>
        .
      </p>
    </Message>
  </noscript>
  <withI18nextTranslation(App)
    expr="testing"
    permalinkUrl="http://example.com"
    syntax="test"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "name": "Testing JS",
        },
        Object {
          "id": "other",
          "name": "Other",
        },
      ]
    }
  />
</Fragment>
`;
